# IMUOrientationEstimator

./: CMakeLists.txt  README.md
example/: RunCSVData.cpp  RunMyntEye.cpp  RunRosbag.cpp  RunSimData.cpp
include/: Estimator.h  Initializer.h  Propagator.h  Updater.h  Utils.h
src/: Estimator.cpp  Initializer.cpp  Propagator.cpp  Updater.cpp
